Fixed: layout breaking due to incorrect responsive approach

--- a/public/styles.css
+++ b/public/styles.css
@@ -49,7 +49,9 @@
   --s-lg: 0 25px 50px rgba(0, 0, 0, 0.75);
 
   /* Operationals */
-  --max-width: 720px;
+  --main-max-width: 750px;
+  --main-initial-padding: var(--d-20);
+  --plank-length: 400px;
   --seesaw-scale: 1;
   --seesaw-height: 250px;
 }
@@ -116,9 +118,9 @@ main {
   flex-direction: column;
   gap: var(--d-20);
 
-  max-width: var(--max-width);
+  max-width: var(--main-max-width);
 
-  padding-inline: var(--d-20);
+  padding-inline: var(--main-initial-padding);
   padding-block: var(--d-15);
 
   border: solid 1px var(--c-border);
@@ -235,7 +237,7 @@ button:active {
 .seesaw-wrapper {
   position: relative;
 
-  max-width: calc(var(--max-width) - (var(--d-20) * 2));
+  width: 100%;
   height: calc(var(--seesaw-height) * var(--seesaw-scale));
 
   margin-inline: auto;
@@ -243,13 +245,13 @@ button:active {
 
 .seesaw-container {
   position: absolute;
+  left: 0;
   top: 0;
-  left: 50%;
+  right: 0;
 
-  width: calc(var(--max-width) - (var(--d-20) * 2));
   height: var(--seesaw-height);
 
-  transform: translateX(-50%) scale(var(--seesaw-scale));
+  transform: scale(var(--seesaw-scale));
   transform-origin: top center;
 }
 
@@ -286,7 +288,7 @@ button:active {
   left: 50%;
   bottom: 50%;
 
-  width: 400px;
+  width: var(--plank-length);
   height: 40px;
 
   transform: translate(-50%, 50%);
@@ -336,7 +338,7 @@ h2 {
   font-weight: var(--fw-medium);
 }
 
-@media (max-width: 680px) {
+@media (max-width: 600px) {
   body {
     padding: var(--d-15);
   }
@@ -418,5 +420,4 @@ h2 {
   font-family: var(--ff-monospace);
   font-size: var(--fs-10);
   line-height: 1.4;
-  white-space: nowrap;
 }
